objects/Credit_Note_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Calculate_Vat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>USt. berechnen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <label>Gutschrift</label>
        <referenceTo>Credit_Note__c</referenceTo>
        <relationshipLabel>Gutschriftspositionen</relationshipLabel>
        <relationshipName>Credit_Note_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Gutschriftsposition_ID__c</fullName>
        <label>Old Gutschriftsposition ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Credit_Note__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Honorar</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Bezeichnung</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Gutschriftsposition</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gutschriftspositionen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>